[package]
name = "coin-rs"
description = "Toss a coin and other random utilities for the terminal"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/fedfontana/coin-rs"
author = [ "fedfontana" ]
license = "MIT"

[dependencies]
clap = { version = "4.1.0", features = ["derive"] }
rand = "0.8.5"

[[bin]]
name = "toss"
path = "src/main.rs"